[project]
name = "bearflow"
version = "0.1.1"
description = "My signature version of workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.1.1",
    "celery>=5.5.3",
    "dagster>=1.11.16",
    "prefect>=3.4.25",
    "redis>=7.0.1",
    "temporalio>=1.18.2",
]
